
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
typedef int u16 ;
struct iwl_trans_pcie {int scd_base_addr; } ;
struct iwl_trans {int dummy; } ;


 struct iwl_trans_pcie* IWL_TRANS_GET_PCIE_TRANS (struct iwl_trans*) ;
 int SCD_QUEUE_RA_TID_MAP_RATID_MSK ;
 int SCD_TRANS_TBL_OFFSET_QUEUE (int) ;
 int iwl_trans_read_mem32 (struct iwl_trans*,int) ;
 int iwl_trans_write_mem32 (struct iwl_trans*,int,int) ;

__attribute__((used)) static int iwl_pcie_txq_set_ratid_map(struct iwl_trans *trans, u16 ra_tid,
     u16 txq_id)
{
 struct iwl_trans_pcie *trans_pcie = IWL_TRANS_GET_PCIE_TRANS(trans);
 u32 tbl_dw_addr;
 u32 tbl_dw;
 u16 scd_q2ratid;

 scd_q2ratid = ra_tid & SCD_QUEUE_RA_TID_MAP_RATID_MSK;

 tbl_dw_addr = trans_pcie->scd_base_addr +
   SCD_TRANS_TBL_OFFSET_QUEUE(txq_id);

 tbl_dw = iwl_trans_read_mem32(trans, tbl_dw_addr);

 if (txq_id & 0x1)
  tbl_dw = (scd_q2ratid << 16) | (tbl_dw & 0x0000FFFF);
 else
  tbl_dw = scd_q2ratid | (tbl_dw & 0xFFFF0000);

 iwl_trans_write_mem32(trans, tbl_dw_addr, tbl_dw);

 return 0;
}
